--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <h1>Testing title</h1>
+        <h1>Testing Title</h1>
         <div id="logo">
             <img src="#" height="100" width="100">
         </div>
@@ -21,27 +21,19 @@
     <div class="banner">
         <img src="#" height="100" width="100%">
     </div>
-    <div class="wrapper1">
-        <!--
-        // Tips: use camel case like contentRight, contentLeft etc so that it
-          becomes easy to read
-        // I would wrap nav element with another div with class name contentLeft
-          so that it clearly differentiable
-        // ... and use this classes just for floating: left/right. This way we can
-          take use of this in another place
-       -->
-        <div class="contentLeft">
+    <div class="image-content-top">
+        <div class="content-left">
           <nav>
               <ul>
-                  <li><a href="#">Link 1</a></li>
-                  <li><a href="#">Link 2</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="jspage.html">JavaScript</a></li>
                   <li><a href="#">Link 3</a></li>
                   <li><a href="#">Link 4</a></li>
               </ul>
           </nav>
         </div>
-        <div class="contentRight">
-            <div class="textContent">
+        <div class="content-right">
+            <div class="text-content">
                 <h3>Title</h3>
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and
@@ -55,44 +47,42 @@
         </div>
     </div>
     <div class="clear"></div>
-
-    <!-- PLEASE AMEND AS IN WRAPPER1 -->
-    <div class="wrapper2">
-        <div class="contentLeft">
-            <div class="textcontent">
-                <h3>Title 2</h3>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
-                    an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
-                    not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
-                    more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                </p>
+        <div class="image-content-bottom">
+            <div class="content-left">
+                <div class="text-content">
+                    <h3>Title 2</h3>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
+                        an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
+                        not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
+                        more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                </div>
+            </div>
+            <div class="content-right">
+                <img src="#" height="150" width="200">
             </div>
         </div>
-        <div class="contentRight">
-            <img src="#" height="150" width="200">
-        </div>
-    </div>
-    <footer>
-        <section>
-            <h3>Area of expertise</h3>
-            <div class="skills">
-                <ul>
-                    <li><h2>Text 1</h2></li>
-                    <li><h2>Text 2</h2></li>
-                    <li><h2>Text 3</h2></li>
-                    <li><h2>Text 4</h2></li>
-                </ul>
-            </div>
-        </section>
+        <footer>
+            <section>
+                <h2>Area of expertise</h2>
+                <div class="skills">
+                    <ul>
+                        <li><h3>Text 1</h3></li>
+                        <li><h3>Text 2</h3></li>
+                        <li><h3>Text 3</h3></li>
+                        <li><h3>Text 4</h3></li>
+                    </ul>
+                </div>
+            </section>
 
-    </footer>
-    <div id="copyright">
-        <p>
-            &copy; copyright 2016
-        </p>
-    </div>
+        </footer>
+        <div id="copyright">
+            <p>
+                &copy; copyright 2016
+            </p>
+        </div>
 </body>
 </html>
